# corus

./: Cargo.toml  Dockerfile.aarch64  Makefile  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  publish.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-aarch64-image.yml
chorus/: Cargo.toml
chorus-core/: Cargo.toml
chorus-core/examples/: dump_self.rs
chorus-core/src/: compress.rs  dump.rs  io.rs  lib.rs  proc_parse.rs  threads.rs
chorus-core/tests/: assemble.rs  crash_cleanup.rs  elf_header.rs  gcore_diff.rs  io.rs  no_alloc.rs  proc_parse.rs  threads.rs
chorus-core/tests/common/: mod.rs
chorus-syscall/: Cargo.toml
chorus-syscall/examples/: clone_once.rs
chorus-syscall/src/: kernel_types.rs  lib.rs  sys.rs
chorus-syscall/src/arch/: x86_64.rs
chorus-syscall/tests/: clone.rs  ptrace.rs  wrappers.rs
chorus/examples/: dump_self_rust_api.rs
chorus/src/: capi.rs  lib.rs  params.rs  rust_api.rs
chorus/tests/: c_abi_features.rs  rust_api_core_dump.rs
chorus/tests/common/: mod.rs
coredumper/: config.h.in  coredumper_unittest.c
coredumper/google/: coredumper.h
corus/: Cargo.toml
corus-core/: Cargo.toml  README.md
corus-core/examples/: dump_self.rs
corus-core/src/: compress.rs  dump.rs  elf.rs  elfcore.rs  io.rs  lib.rs  notes.rs  proc_parse.rs  threads.rs
corus-core/tests/: assemble.rs  crash_cleanup.rs  elf_header.rs  gcore_diff.rs  gdb_load.rs  io.rs  no_alloc.rs  proc_parse.rs  threads.rs
corus-core/tests/common/: mod.rs
corus-syscall/: Cargo.toml  README.md
corus-syscall/examples/: clone_once.rs
corus-syscall/src/: kernel_types.rs  lib.rs  linux.rs  sys.rs
corus-syscall/src/arch/: aarch64.rs  x86_64.rs
corus-syscall/tests/: capture_frame.rs  clone.rs  ptrace.rs  strace_clone.rs  wrappers.rs
corus/examples/: crash_handler.rs  dump_self_rust_api.rs  lister_primitives.rs
corus/src/: capi.rs  lib.rs  rust_api.rs
corus/tests/: c_abi_features.rs  fork_snapshot_resume.rs  rust_api_core_dump.rs
corus/tests/common/: mod.rs
ctests/: crash_handler.c  writecore_smoke.c
