[workspace]
resolver = "3"
members = [
    "chorus-syscall",
    "chorus-core",
    "chorus",
]

[workspace.package]
edition = "2024"
version = "0.0.0-semantic-release"
rust-version = "1.88"
license = "BSD-3-Clause"
repository = "https://github.com/cmeister2/chorus"

# Panicking on the post-suspension dump path must never unwind (the unwinder
# would touch machinery we cannot safely use while sibling threads are stopped).
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
