[package]
name = "corus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Let Linux processes write their own ELF core dumps."
keywords = ["coredump", "core", "elf", "linux", "debugging"]
readme = "README.md"

[lib]
# cdylib + staticlib: cdylib for drop-in C consumers, staticlib so the existing
# C unit test (coredumper/coredumper_unittest.c) can link against it.
# rlib so Rust consumers can depend on this crate directly.
name = "corus"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
corus-core = { version = "0.0.0-semantic-release", path = "../corus-core" }
which = "8.0.4"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

[dev-dependencies]
tempfile = "3.27.0"
